--- a/style.css
+++ b/style.css
@@ -42,3 +42,9 @@ img{
     margin-top: 5rem;
     width:25vw;
 }
+@media screen and (max-width: 1100px) {
+    .quote{
+        font-size: 2rem;
+    }
+    
+}
