--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ img{
 @media screen and (max-width: 1100px) {
     .quote{
         font-size: 2rem;
-        megin-top:5rem
+        margin-top:1rem
     }
     
 }
