add margin settings to media query again and more

--- a/style.css
+++ b/style.css
@@ -47,5 +47,10 @@ img{
         font-size: 2rem;
         margin-top:1rem
     }
-    
+    .main{
+        padding:1rem;
+    }
+    img{
+        width:40vw;
+    }
 }
